# secbind

./: .gitignore  .secenv.example  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_NOTES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: ISSUES_SEED.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.yml
.github/workflows/: audit.yml  ci.yml
crates/secbind-cli/: Cargo.toml
crates/secbind-cli/src/: config.rs  main.rs
crates/secbind-cli/src/cmd/: audit.rs  dashboard.rs  export.rs  init.rs  migrate.rs  reveal.rs  run.rs  seal.rs
crates/secbind-core/: Cargo.toml
crates/secbind-core/src/: context.rs  crypto.rs  envelope.rs  error.rs  fingerprint.rs  lib.rs  version.rs
sdk/node/: package-lock.json  package.json  tsconfig.json
sdk/node/src/: client.ts  dotenvx.ts  index.ts  loader.ts
