[package]
name = "secbind-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# v0.2 migration: replace pqcrypto-kyber with pqcrypto-mlkem (FIPS 203 compliant ML-KEM-768).
# Kyber Round 3 and ML-KEM-768 are algorithmically near-identical but have subtly different
# ciphertext encodings — v1 .secenv files CANNOT be decapsulated by a strict FIPS 203
# implementation. Ship a `secbind migrate` command before switching crates.
# Planned replacement: pqcrypto-mlkem = "0.1" (https://crates.io/crates/pqcrypto-mlkem)
pqcrypto-kyber     = "0.8"
# v0.2 migration: replace pqcrypto-dilithium with pqcrypto-mldsa (FIPS 204 compliant ML-DSA-65).
# Planned replacement: pqcrypto-mldsa = "0.1" (https://crates.io/crates/pqcrypto-mldsa)
pqcrypto-dilithium = "0.5"
pqcrypto-traits    = "0.3"
chacha20poly1305   = "0.10"
hkdf               = "0.12"
sha3               = "0.10"
zeroize            = { version = "1.7", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
base64             = "0.22"
machine-uid        = "0.5"
chrono             = { version = "0.4", features = ["serde"] }
thiserror          = "1"
rand               = "0.8"
