[package]
name = "secbind-core"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-kyber     = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-mlkem     = "0.1"
pqcrypto-mldsa     = "0.1"
pqcrypto-traits    = "0.3"
chacha20poly1305   = "0.10"
hkdf               = "0.12"
sha3               = "0.10"
zeroize            = { version = "1.7", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
base64             = "0.22"
machine-uid        = "0.5"
chrono             = { version = "0.4", features = ["serde"] }
thiserror          = "1"
rand               = "0.8"
